--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "license": "MIT",
     "globalDependencies": {},
     "dependencies": {
-        "@lotsof/sugar": "^0.0.1"
+        "@lotsof/sugar": "^0.0.1",
+        "browserslist": "^4.23.0",
+        "lightningcss": "^1.24.1"
     },
     "devDependencies": {
         "typescript": "^5.4.4"
