--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "MIT",
   "globalDependencies": {},
   "dependencies": {
+    "@lotsof/config": "^0.0.1",
     "@lotsof/sugar": "^0.0.1",
     "browserslist": "^4.23.0",
     "lightningcss": "^1.25.0"
