--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,11 @@
 {
-  "exclude": ["lotsof.config.ts", "./dist/**/*"],
+  "exclude": [
+    "lotsof.config.ts",
+    "**/*.test.*",
+    "dist/**/*",
+    "node_modules/**/*",
+    "vendor/**/*"
+  ],
   "compilerOptions": {
     "noImplicitAny": false,
     "rootDir": "src",
@@ -10,6 +16,7 @@
     "module": "NodeNext",
     "sourceMap": true,
     "declaration": true,
+
     "esModuleInterop": true,
     "moduleResolution": "nodenext"
   }
