--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lotsof/sugarcss",
   "description": "Add a sugar in your css with nice features like live update and more",
-  "version": "1.0.0",
+  "version": "1.0.0-alpha.0",
   "type": "module",
   "scripts": {
     "dev": "tsc --watch",
@@ -21,10 +21,10 @@
   "license": "MIT",
   "globalDependencies": {},
   "dependencies": {
-    "@lotsof/config": "^1.0.0",
-    "@lotsof/sugar": "^1.0.0",
+    "@lotsof/config": "^1.0.0-alpha",
+    "@lotsof/sugar": "^1.0.0-alpha",
     "browserslist": "^4.23.0",
-    "lightningcss": "^1.25.1"
+    "lightningcss": "^1.26.0"
   },
   "devDependencies": {
     "typescript": "^5.4.4"
